# ppt_generator

./: .gitignore  README.md  a.py  main.py  output.json  pyproject.toml
common/: json_to_pptx.py  lyric.py  pptx_to_json.py  presentation.py
md/: setup.md
md/spec/: functional_design.md  overview.md  tech_spec.md  ui_ux.md
md/spec/core/: engine_spec.md  overview.md  schema_spec.md
md/spec/state/: state_spec.md
md/spec/ui/: export_view.md  layout_picker_view.md  onboarding.md  slide_builder_viewer.md  views_spec.md
md/work_spec/: constitution.md  work_rule.md
md/work_table/: table_rule.md
md/work_table/ui-export-view/: table.md
md/work_table/ui-layout-picker-view/: table.md
md/work_table/ui-onboarding-view/: table.md
md/work_table/ui-slide-builder-view/: table.md
md/work_table/ui-structure-setup/: table.md
src/: main.py
src/core/: engine.py  schema.py
src/state/: app_state.py
src/ui/: app.py
src/ui/views/: export.py  layout_picker.py  onboarding.py  slide_builder.py
