[project]
name = "ppt-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.84.0",
    "pydantic>=2.13.2",
    "pyinstaller>=6.19.0",
    "python-pptx>=1.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
